# hashzap

./: README.md  pyproject.toml  requirements.txt
src/hashzap.egg-info/: PKG-INFO  requires.txt
src/hashzap/flask_app/templates/: index.html
src/hashzap/flet_app/: main.py
